[gd_scene load_steps=2 format=3 uid="uid://553fxx4pgj8n"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_arykj"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_arykj")

[node name="Host" type="Button" parent="."]
offset_left = -603.0
offset_top = 176.0
offset_right = -559.0
offset_bottom = 207.0
text = "Host"

[node name="Connect" type="Button" parent="."]
offset_left = -603.0
offset_top = 213.0
offset_right = -531.0
offset_bottom = 244.0
text = "Connect"

[node name="LeaveParty" type="Button" parent="."]
offset_left = -605.0
offset_top = 248.0
offset_right = -506.0
offset_bottom = 279.0
text = "Leave Party"

[node name="Back" type="Button" parent="."]
offset_left = -596.0
offset_top = 285.0
offset_right = -551.0
offset_bottom = 316.0
text = "Back"

[node name="startGame" type="Button" parent="."]
offset_left = -612.0
offset_top = 137.0
offset_right = -519.0
offset_bottom = 168.0
text = "Start game"

[node name="ConnectGUI" type="Node2D" parent="."]
visible = false

[node name="ConnectToServer" type="Button" parent="ConnectGUI"]
offset_left = -73.0
offset_top = 63.0
offset_right = 74.0
offset_bottom = 94.0
text = "Connect to server"

[node name="Name" type="LineEdit" parent="ConnectGUI"]
offset_left = -75.0
offset_top = -40.0
offset_right = 74.0
offset_bottom = -9.0
placeholder_text = "name"

[node name="Ip" type="LineEdit" parent="ConnectGUI"]
offset_left = -74.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 41.0
text = "127.0.0.1"
placeholder_text = "ip"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="LeaveParty" to="." method="_on_leave_party_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ConnectGUI/ConnectToServer" to="." method="_on_connect_to_server_pressed"]
